syntax = "proto3";
package cellarfees.v1;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/peggyjv/sommelier/v4/x/cellarfees/types";

message CellarFeePool {
    repeated cosmos.base.v1beta1.Coin pool = 1
        [(gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins", (gogoproto.nullable) = false];
}

message FeeAccrualCounter {
    string denom = 1;
    uint64 count = 2;
}

message FeeAccrualCounters {
    repeated FeeAccrualCounter counters = 1 [(gogoproto.nullable) = false];
}
